--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,14 @@
 CHANGELOG
 =========
 
+0.1.1
+-----
+* Added docstring to the get API
+* made sure that makedist.sh removes old MANIFEST file before making new
+  package
+* fixed version string in esclient.py
+
+
 0.1.0
 -----
 From now on I will conform to the Semantic Versioning Guidelines outlined
