changed send_request to more readable code

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,9 +2,10 @@
 CHANGELOG
 =========
 0.2.0
-* Removed option the chose between JSON of hierachy of Python object. It
+* Removed option to choose between JSON or hierachy of Python objects. It
   would have created too much hassle.
 * Added API methods: mget, ...
+* small fixes here and there
 
 0.1.1
 -----
